# loltrack

./: .gitignore  CHANGELOG.md  README.md  addtl_srcs.md  dashboard_spec.md  generalized_improvement_score.md  leftover-spec.md  leftover_spec.md  pyproject.toml  v0-5-spec.md  v0-6-spec.md  v0-7-spec.md  v0-spec.md
backend/: pyproject.toml
backend/backend/: app.py  deps.py
backend/backend/live/: poller.py  socket.py
backend/backend/routers/: assets.py  auth.py  health.py  matches.py  metrics.py  sync.py
backend/server/: app.py  deps.py
backend/server/cron/: ingestor.py  sweeper.py
backend/server/ingest/: ddragon.py
backend/server/live/: poller.py  socket.py
backend/server/routers/: assets.py  auth.py  gis.py  health.py  live.py  matches.py  metrics.py  sync.py
core/: __main__.py  config.py  gis.py  live.py  metrics.py  metrics_extras.py  riot.py  store.py  windows.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: CardDrilldown.tsx  ErrorBanner.tsx  GISSummary.tsx  GlossaryButton.tsx  GlossaryDrawer.tsx  GlossaryProvider.tsx  HealthPills.tsx  MatchDrawer.tsx  MetricCard.tsx  MetricPills.tsx  MiniBullet.tsx  MiniLine.tsx  ProgressRibbon.tsx  ScoreCard.tsx  StatusChip.tsx  SyncCTA.tsx
frontend/src/lib/: analytics.ts  api.ts  format.ts  glossary.ts  hooks.ts  metrics.test.ts  metrics.ts  queues.ts  ws.ts
frontend/src/routes/: Dashboard.tsx  Live.tsx  Matches.tsx  Settings.tsx  Targets.tsx
frontend/src/shared/: FilterBar.tsx
frontend/src/styles/: tailwind.css
loltrack/: __main__.py  dashboards.py  riot.py  store.py
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
tests/: test_gis.py  test_weights.py
