[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "loltrack-backend"
version = "0.1.0"
description = "Local FastAPI backend for LoL Stat-Tracker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "orjson>=3.10",
  "httpx>=0.27",
  "tenacity>=8.2",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "keyring>=24.3",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]
